force-app/main/default/objects/Convention__c/fields/Composition_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Composition_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Composition du foyer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Conventions</relationshipLabel>
    <relationshipName>Conventions</relationshipName>
    <type>Lookup</type>
</CustomField>