force-app/main/default/objects/Convention__c/fields/CON_ExtId_Google__c.field-meta.xml
<CustomField>
    <fullName>CON_ExtId_Google__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CON ExtId Google</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>