force-app/main/default/objects/Convention__c/fields/Date_de_refus__c.field-meta.xml
<CustomField>
    <fullName>Date_de_refus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date de refus</label>
    <type>Date</type>
</CustomField>