force-app/main/default/objects/Convention__c/fields/Foyer__c.field-meta.xml
<CustomField>
    <fullName>Foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Conventions</relationshipLabel>
    <relationshipName>Conventions</relationshipName>
    <type>Lookup</type>
</CustomField>