force-app/main/default/objects/Convention__c/fields/Individu_Paneliste__c.field-meta.xml
<CustomField>
    <fullName>Individu_Paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Individu Panéliste</label>
    <referenceTo>Individu_Paneliste__c</referenceTo>
    <relationshipLabel>Conventions</relationshipLabel>
    <relationshipName>Conventions</relationshipName>
    <type>Lookup</type>
</CustomField>