force-app/main/default/objects/Convention__c/fields/Referentiel_convention__c.field-meta.xml
<CustomField>
    <fullName>Referentiel_convention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel convention</label>
    <referenceTo>Referentiel_convention__c</referenceTo>
    <relationshipLabel>Conventions</relationshipLabel>
    <relationshipName>Conventions</relationshipName>
    <type>Lookup</type>
</CustomField>