force-app/main/default/objects/Convention__c/fields/Type_de_signature__c.field-meta.xml
<CustomField>
    <fullName>Type_de_signature__c</fullName>
    <label>Type de signature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Electronique</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Papier</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>