force-app/main/default/objects/Convention__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_de_signature_de_la_convention__c</columns>
    <columns>Foyer_paneliste__c</columns>
    <columns>Type_de_panel__c</columns>
    <columns>Individu_Paneliste__c</columns>
    <filterScope>Everything</filterScope>
    <label>Toutes les conventions</label>
</ListView>